// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TADomainService should pass create job application with valid payload and career and education should have new id 1`] = `
{
  "created_at": Any<Date>,
  "created_by": 0,
  "description": null,
  "end_date": Any<Date>,
  "id": 10,
  "is_current": true,
  "job_application_id": Anything,
  "organization": "pulsifi",
  "place_formatted_address": "publika, sri hartamas, kuala lumpur, wilayah persekutuan, 58200, malaysia",
  "place_result": {
    "country": "malaysia",
    "display_address": "publika, sri hartamas, kuala lumpur, wilayah persekutuan, 58200, malaysia",
    "locality": "kuala lumpur",
    "place_id": "asdasda",
    "postal_code": "58200",
    "state": "wilayah persekutuan",
    "street_name": "sri hartamas",
    "street_number": "",
    "sublocality": "kuala lumpur",
    "vicinity": "kuala lumpur",
  },
  "responsibilities_achievements": "This is my responsibilities & achievements",
  "role": "software engineer",
  "start_date": Any<Date>,
  "updated_at": Any<Date>,
  "updated_by": 0,
}
`;

exports[`TADomainService should pass create job application with valid payload and career and education should have new id 2`] = `
{
  "achievements": "This is my achievements",
  "created_at": Any<Date>,
  "created_by": 0,
  "degree_name": "degree_name",
  "description": "description",
  "end_date": Any<Date>,
  "grade_cgpa": 0,
  "grade_description": "degree_name",
  "grade_type": "grade_type",
  "grade_value": "1",
  "grade_value_max": 2,
  "id": 7,
  "is_highest": true,
  "job_application_id": Anything,
  "major_first": "major_first",
  "major_second": "major_second",
  "others": "others",
  "parent_id": 0,
  "school_name": "school_name",
  "start_date": Any<Date>,
  "updated_at": Any<Date>,
  "updated_by": 0,
}
`;

exports[`TADomainService should pass update job application with valid application completed payload 1`] = `
{
  "action_histories": [
    JobApplicationActionHistoryDto {
      "action_type": "application_applied",
      "created_username": "Jay Pete",
      "id": 1,
      "job_application_id": "00000000-0000-0000-0000-000000000006",
      "value": {
        "status": "applied",
      },
    },
    JobApplicationActionHistoryDto {
      "action_type": "application_assessment_completed",
      "created_username": "candidate",
      "id": 18,
      "job_application_id": "00000000-0000-0000-0000-000000000006",
      "value": null,
    },
  ],
  "assessment_completed_at": 2024-04-09T05:20:19.000Z,
  "assessment_started_at": null,
  "attachments": [],
  "careers": [],
  "company_id": 5,
  "completed_at": 2024-04-09T05:20:19.000Z,
  "contacts": [],
  "educations": [],
  "ext_candidate_job_application_id": "00000000-0000-0000-0000-000000000007",
  "ext_person_score_id": undefined,
  "ext_reference_id": null,
  "first_name": "Simon",
  "has_passed_screening": true,
  "id": "00000000-0000-0000-0000-000000000006",
  "is_anonymous": false,
  "is_deleted": false,
  "is_questionnaires_required": true,
  "is_video_required": false,
  "job_id": "00000000-0000-0000-0000-000000000004",
  "last_name": "Peter",
  "last_status_changed_at": Any<Date>,
  "place_formatted_address": "1 Pulsifi Road, Pulsifi Garden, 49990, KL.",
  "place_result": PlaceDto {
    "country": "country",
    "display_address": "display_address",
    "geolocation": GeolocationDto {
      "latitude": "39.19109830",
      "longitude": "-106.81753870",
    },
    "locality": "locality",
    "place_id": "place_id",
    "postal_code": "postal_code",
    "state": "state",
    "street_name": "street_name",
    "street_number": "street_number",
    "sublocality": "sublocality",
    "vicinity": "vicinity",
  },
  "primary_contact_email": "test@pulsifi.co",
  "professional_summary": "I have mastered Python programming language",
  "questionnaires": [
    JobApplicationQuestionnaireDto {
      "attempts": 1,
      "completed_at": 2024-01-01T00:00:00.000Z,
      "id": 1,
      "job_application_id": "00000000-0000-0000-0000-000000000006",
      "question_answer_raw": {},
      "questionnaire_framework": "personality",
      "questionnaire_id": 30,
      "result_raw": {},
      "started_at": 2024-01-01T00:00:00.000Z,
    },
  ],
  "resumes": [],
  "scores": [],
  "screening_answers": [],
  "skills": [
    {
      "name": "Python",
      "proficiency": "expert",
      "source": "candidate",
    },
    {
      "name": "Angular",
      "proficiency": "expert",
      "source": "candidate",
    },
    {
      "name": "NodeJS",
      "proficiency": "expert",
      "source": "candidate",
    },
  ],
  "source": "Pulsifi",
  "status": "applied",
  "submitted_at": Any<Date>,
  "total_questionnaires": 1,
  "total_questionnaires_completed": 1,
  "total_screenings": 0,
  "total_screenings_completed": 0,
  "user_account_id": 7,
}
`;

exports[`TADomainService should pass update job application with valid application without assessment 1`] = `
{
  "action_histories": [
    JobApplicationActionHistoryDto {
      "action_type": "application_applied",
      "created_username": "Jay Pete",
      "id": 2,
      "job_application_id": "00000000-0000-0000-0000-000000000008",
      "value": {
        "status": "applied",
      },
    },
  ],
  "assessment_completed_at": null,
  "assessment_started_at": null,
  "attachments": [],
  "careers": [],
  "company_id": 5,
  "completed_at": 2024-04-09T05:20:19.000Z,
  "contacts": [],
  "educations": [],
  "ext_candidate_job_application_id": "00000000-0000-0000-0000-000000000009",
  "ext_person_score_id": undefined,
  "ext_reference_id": null,
  "first_name": "Simon",
  "has_passed_screening": true,
  "id": "00000000-0000-0000-0000-000000000008",
  "is_anonymous": false,
  "is_deleted": false,
  "is_questionnaires_required": false,
  "is_video_required": false,
  "job_id": "00000000-0000-0000-0000-000000000002",
  "last_name": "Peter",
  "last_status_changed_at": Any<Date>,
  "place_formatted_address": "1 Pulsifi Road, Pulsifi Garden, 49990, KL.",
  "place_result": PlaceDto {
    "country": "country",
    "display_address": "display_address",
    "geolocation": GeolocationDto {
      "latitude": "39.19109830",
      "longitude": "-106.81753870",
    },
    "locality": "locality",
    "place_id": "place_id",
    "postal_code": "postal_code",
    "state": "state",
    "street_name": "street_name",
    "street_number": "street_number",
    "sublocality": "sublocality",
    "vicinity": "vicinity",
  },
  "primary_contact_email": "test@pulsifi.co",
  "professional_summary": "I have mastered Python programming language",
  "questionnaires": [],
  "resumes": [],
  "scores": [],
  "screening_answers": [],
  "skills": [
    {
      "name": "Python",
      "proficiency": "expert",
      "source": "candidate",
    },
    {
      "name": "Angular",
      "proficiency": "expert",
      "source": "candidate",
    },
    {
      "name": "NodeJS",
      "proficiency": "expert",
      "source": "candidate",
    },
  ],
  "source": "Pulsifi",
  "status": "applied",
  "submitted_at": Any<Date>,
  "total_questionnaires": 0,
  "total_questionnaires_completed": 0,
  "total_screenings": 0,
  "total_screenings_completed": 0,
  "user_account_id": 7,
}
`;
